hiwac-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: hiwac-frontend
    app.kubernetes.io/instance: hiwac-frontend-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: hiwac-frontend
spec:
  type: ClusterIP
  selector:
    app: hiwac-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
