niwac-backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: niwac-backend
    app.kubernetes.io/instance: niwac-backend-instance
    app.kubernetes.io/version: "1.0.0"
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: kubectl
  name: niwac-backend
spec:
  type: ClusterIP
  selector:
    app: niwac-backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
